--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+Hooks found in WordPress 3.6 using: <pre>apply_filters, apply_filters_ref_array, do_action, do_action_ref_array</pre>
 
-</pre><b>index.php</b><br><pre class='xdebug-var-dump' dir='ltr'>
+<b>index.php</b><br><pre class='xdebug-var-dump' dir='ltr'>
 <b>array</b>
   0 <font color='#888a85'>=&gt;</font> <small>string</small> <font color='#cc0000'>''</font> <i>(length=0)</i>
 </pre><b>wp-activate.php</b><br><pre class='xdebug-var-dump' dir='ltr'>
